# trenes-optimization-tool

./: .gitignore  CLAUDE.md  CODE_DOCUMENTATION.md  LEARNING_JOURNEY.md  README.md  mcp_settings.json  pyproject.toml  test_scraping.py
src/trenes_tool/: __init__.py  cli.py  database.py  models.py  optimizer.py  scraper.py
tests/: test_models.py
